@@ -9,8 +9,10 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Alejandro Garrido Mota
   Jakub Wilk
   Jason A. Pfeil
+  Jörg Krause
+  Ben Boeckel
 
 Thanks to the following, who submitted detailed bug reports and excellent suggestions:
 
-  -
+  hosaka
 
